--- a/lab1/portfolio/css/styles.css
+++ b/lab1/portfolio/css/styles.css
@@ -1,13 +1,13 @@
 body {
     background-color:black;
-    color:gray;
+    color:grey;
     }
     
-    header, main, nav, footer {
+header, main, nav, footer {
         text-align: center;
     }
     
-    nav a {
+nav a {
         /* links within "nav container" */
         padding:15px;
         padding-bottom:4px;
@@ -15,22 +15,57 @@ body {
         text-decoration: none; /*removes underline*/
         color:white;
     }
-    nav a:hover { /*pseudo class*/
+nav a:hover { /*pseudo class*/
     border-bottom:2px orange solid; 
     font-size: 2em;
     transition: .9s;
     }
     
-    #me{
-        float:center;
+#me {
+        float:left;
     }
-    #welcomeText
-    {
+#welcomeText{
         float:left;
     }
     
-    footer {
+table {
+    margin: 0px auto;
+}    
+
+td {
+    padding-right: 10px;
+    font-size:1.3em;
+}
+td strong {
+    color: orange;
+}
+
+#table-header {
+    background-color: #351a00;
+}
+
+.table-row{
+    background-color: #753900;
+    color:white;
+}
+
+ul{
+    text-align: left;
+    padding-left: 200px;
+}
+
+.hobby{
+    color:yellow;
+}
+
+footer {
         clear: left;
         font-size:.7em;
         color:orange;
     }
+
+h1 {
+    font-family: 'Monda', sans-serif;
+    font-size:4em;
+    margin-bottom:0px;
+}
